Java 17: Compiler-Ziel 17, Thread.sleep(long), get(0) statt getFirst()
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>